--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "mocha -R spec"
   },
-  "main": "lib/hostsfile.js",
+  "main": "lib/ntpd_status.js",
   "dependencies": {
     "inpath": "~1.0.2"
   },
